# frameworks

./: .gitignore  README.md  ROADMAP.md  libreoffice-draw-25.8.1.1-0.2.fc43.x86_64.rpm  test_3d_frame_pynite.py  test_3d_frame_request.json
calculix-service/: Cargo.toml  beam_request.json  plate_benchmark.inp  portal_frame_request.json  sample_request.json
calculix-service/calculix-tests/: fixed_beam_test.12d  fixed_beam_test.inp  frame_test.json  pinned_beam_10elem.12d  pinned_beam_10elem.inp  pinned_beam_request.json  pinned_beam_test.12d  pinned_beam_test.inp  pinned_beam_test2.12d  pinned_beam_test2.inp  pinned_coupled_test.12d  pinned_coupled_test.inp
calculix-service/calculix-tests/debug_export/: analysis_0860547e-5114-4684-9c7b-6f94993d0d04.inp  analysis_0f87422f-4e72-401d-b405-d77323d99bf7.inp  analysis_16ab3562-4be1-4d01-b9c5-93b8b2f1bf7d.inp  analysis_1a17f8f6-f11e-4138-8793-5f8235414ef4.inp  analysis_1b64b42d-43b7-44e8-9234-c84b79925336.inp  analysis_2d00a5b7-408e-467e-9515-c69cbcdbd729.inp  analysis_2ed2fd2f-66ed-4732-9712-b77b47dbad72.inp  analysis_383b0549-858d-4968-b8b2-8f95b7402e88.inp  analysis_3970e36e-881b-4fd9-8f57-d84713409a7d.inp  analysis_3e6336a5-54d9-461d-a19f-02e473ccd894.inp  analysis_41970d11-e5e4-4f4e-9624-af05b8fe72e4.inp  analysis_423f8966-24f5-450f-91f5-c0cc7c173a5c.inp  analysis_444f6ccb-ad31-4cf1-94cb-b6f7461cbda1.inp  analysis_4923a075-7c89-429d-8784-5c3359e5e67e.inp  analysis_4a585ad2-f2b4-4660-bd46-bc4086b79ffc.inp  analysis_4f5eaa72-2dec-4744-9081-677b54f50c61.inp  analysis_55888bc9-b451-49b8-9b88-2d58d4b90fc1.inp  analysis_59c70a1e-a6c6-4bbc-b074-43f81abb7e09.inp  analysis_60859197-5d95-4c7f-b4b2-54b88beb9f95.inp  analysis_6475f3f9-c4fa-484b-ac2f-64b5312e3faa.inp  analysis_6b6442ab-9929-448b-8760-3c036849d3b4.inp  analysis_7269da49-242b-4c7c-a207-30ebeb023197.inp  analysis_77a6da62-5073-464d-bc81-5cb7c3088373.inp  analysis_7e8769da-1e58-4ddc-a1a0-2cc8be186a05.inp  analysis_80c27a64-3892-4678-987f-210c67c9aad9.inp  analysis_829126d0-ac8e-4acb-b873-1f8486aa0896.inp  analysis_8e28eacb-6872-405e-a9de-15d3fdbe03a2.inp  analysis_910611bf-3d15-41c6-be05-ee22722bd0e3.inp  analysis_93983166-299f-4d45-930c-6394e8f4e7d9.inp  analysis_a65bd9dd-bce1-4681-8bb0-f79f1d5192bd.inp  analysis_a67a7f84-ef7d-4349-9311-b57497bad9b5.inp  analysis_b2daa271-8f81-4c24-88e8-5c0cd885bbaa.inp  analysis_bbe66de1-56e6-4471-9c59-fa7d5c979202.inp  analysis_c12b8097-3879-468b-af8a-87265e63b296.inp  analysis_c5ac5b4a-bc6a-4048-8772-e9f4c3f632c0.inp  analysis_cecfc19f-a34a-4276-979c-872f84169c86.inp  analysis_d4e7b48c-8a1e-4faa-b9b3-24dabf52f861.inp  analysis_d6a4775c-54c3-4295-a07e-eeeb54968e4e.inp  analysis_d73045aa-e2a2-45dd-b057-e70d26f4063f.inp  analysis_d93b2b6d-99d9-4e71-8085-bd87afe77457.inp  (+10 more)
calculix-service/src/: api.rs  executor.rs  generator.rs  main.rs  models.rs
fea-solver/: Cargo.toml  README.md  sample_request.json
fea-solver/benches/: solver_bench.rs
fea-solver/src/: error.rs  lib.rs  math.rs  model.rs  results.rs  wasm.rs
fea-solver/src/analysis/: mod.rs
fea-solver/src/elements/: material.rs  member.rs  mod.rs  node.rs  plate.rs  quad.rs  section.rs  support.rs
fea-solver/src/loads/: distributed.rs  load_case.rs  load_combo.rs  mod.rs  node_load.rs  plate_load.rs  point_load.rs
fea-solver/src/math/: mod.rs  plate.rs  sparse.rs
fea-solver/tests/: von_mises_plate_pinned_corners.rs
frameworks/: build.rs  (+4 more)
frameworkz/: Cargo.toml
frameworkz/src/: calculix_client.rs  lib.rs  viewport_combined.js
(+102 files in other folders)
