[package]
name = "fea-solver"
version = "0.1.0"
edition = "2021"
description = "A native Rust Finite Element Analysis solver inspired by PyNite"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fea-server"
path = "src/bin/server.rs"

[[bin]]
name = "fea-example"
path = "src/bin/example.rs"

[features]
default = ["server"]
server = ["axum", "tokio"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "wee_alloc", "js-sys", "web-sys"]

[dependencies]
# Core math
nalgebra = { version = "0.33", features = ["serde-serialize"] }
nalgebra-sparse = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Server dependencies (optional)
axum = { version = "0.7", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["cors"] }

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "solver_bench"
harness = false
