[package]
name = "plane-s"
version = "0.1.0"
authors = ["daveh07 <david.hill87@outlook.com>"]
edition = "2021"

[lib]
name = "plane_s"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
js-sys = "0.3.82"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
thiserror = "1.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "WheelEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRect",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
